@@ -1,5 +1,6 @@
 Updates--
 
+2018-06-20 v1.2.10: Added The Business Journals (bizjournals.com)
 2018-06-27 v1.2.9: Fixed The Washington Post (washingtonpost.com)
 2018-06-22 v1.2.8: Added Vanity Fair (vanityfair.com), added The Globe and Mail (theglobeandmail.com)
 2018-06-03 v1.2.7: Added Wired (wired.com)
